exports[`<CertificationBadge /> renders "CERTIFIED" if certified 1`] = `
<small>
  <i
    aria-hidden="true"
    className="fa fa-check-circle" />
   CERTIFIED
</small>
`;

exports[`<CertificationBadge /> renders "NOT CERTIFIED" if not certified 1`] = `
<small>
  <i
    aria-hidden="true"
    className="fa fa-times-circle" />
   NOT CERTIFIED
</small>
`;
